add base reader